fix matching API
